--- a/different scrapper techniques.ipynb
+++ b/different scrapper techniques.ipynb
@@ -65,31 +65,21 @@
     "scraping_data = []\n",
     "labels = [label for label in parsed_page.find_all('tr')[0].get_text().splitlines()[1:]]\n",
     "[scraping_data.append((t, [])) for t in labels]\n",
-    "# list(map(lambda x: data.append((x,[])), [i for i in labels]))"
+    "# list(map(lambda x: data.append((x,)), [i for i in labels]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-c26da45b5a8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mtd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtd_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow_data\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtd\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mscraping_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mi\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td_data = parsed_page.find_all('tr')\n",
     "for j in range(1, len(parsed_page.find_all('tr')[1:])):\n",
     "    i = 0\n",
     "    td = td_data[j].get_text().splitlines()[1:]\n",
+    "    if len(td) != len(td_data[0].get_text().splitlines()[1:]):\n",
+    "        break\n",
     "    for row_data in td:\n",
     "        scraping_data[i][1].append(row_data)\n",
     "        i+=1"
@@ -97,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,54 +393,45 @@
        "      <td>372</td>\n",
        "      <td>171</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Total number of confirmed cases in India</td>\n",
-       "      <td>62939*</td>\n",
-       "      <td></td>\n",
-       "      <td>19358</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      S. No.           Name of State / UT  \\\n",
-       "0                                          1  Andaman and Nicobar Islands   \n",
-       "1                                          2               Andhra Pradesh   \n",
-       "2                                          3            Arunachal Pradesh   \n",
-       "3                                          4                        Assam   \n",
-       "4                                          5                        Bihar   \n",
-       "5                                          6                   Chandigarh   \n",
-       "6                                          7                 Chhattisgarh   \n",
-       "7                                          8           Dadar Nagar Haveli   \n",
-       "8                                          9                        Delhi   \n",
-       "9                                         10                          Goa   \n",
-       "10                                        11                      Gujarat   \n",
-       "11                                        12                      Haryana   \n",
-       "12                                        13             Himachal Pradesh   \n",
-       "13                                        14            Jammu and Kashmir   \n",
-       "14                                        15                    Jharkhand   \n",
-       "15                                        16                    Karnataka   \n",
-       "16                                        17                       Kerala   \n",
-       "17                                        18                       Ladakh   \n",
-       "18                                        19               Madhya Pradesh   \n",
-       "19                                        20                  Maharashtra   \n",
-       "20                                        21                      Manipur   \n",
-       "21                                        22                    Meghalaya   \n",
-       "22                                        23                      Mizoram   \n",
-       "23                                        24                       Odisha   \n",
-       "24                                        25                   Puducherry   \n",
-       "25                                        26                       Punjab   \n",
-       "26                                        27                    Rajasthan   \n",
-       "27                                        28                   Tamil Nadu   \n",
-       "28                                        29                    Telengana   \n",
-       "29                                        30                      Tripura   \n",
-       "30                                        31                  Uttarakhand   \n",
-       "31                                        32                Uttar Pradesh   \n",
-       "32                                        33                  West Bengal   \n",
-       "33  Total number of confirmed cases in India                       62939*   \n",
+       "   S. No.           Name of State / UT  \\\n",
+       "0       1  Andaman and Nicobar Islands   \n",
+       "1       2               Andhra Pradesh   \n",
+       "2       3            Arunachal Pradesh   \n",
+       "3       4                        Assam   \n",
+       "4       5                        Bihar   \n",
+       "5       6                   Chandigarh   \n",
+       "6       7                 Chhattisgarh   \n",
+       "7       8           Dadar Nagar Haveli   \n",
+       "8       9                        Delhi   \n",
+       "9      10                          Goa   \n",
+       "10     11                      Gujarat   \n",
+       "11     12                      Haryana   \n",
+       "12     13             Himachal Pradesh   \n",
+       "13     14            Jammu and Kashmir   \n",
+       "14     15                    Jharkhand   \n",
+       "15     16                    Karnataka   \n",
+       "16     17                       Kerala   \n",
+       "17     18                       Ladakh   \n",
+       "18     19               Madhya Pradesh   \n",
+       "19     20                  Maharashtra   \n",
+       "20     21                      Manipur   \n",
+       "21     22                    Meghalaya   \n",
+       "22     23                      Mizoram   \n",
+       "23     24                       Odisha   \n",
+       "24     25                   Puducherry   \n",
+       "25     26                       Punjab   \n",
+       "26     27                    Rajasthan   \n",
+       "27     28                   Tamil Nadu   \n",
+       "28     29                    Telengana   \n",
+       "29     30                      Tripura   \n",
+       "30     31                  Uttarakhand   \n",
+       "31     32                Uttar Pradesh   \n",
+       "32     33                  West Bengal   \n",
        "\n",
        "   Total Confirmed cases (Including 111 foreign Nationals)   \\\n",
        "0                                                  33         \n",
@@ -486,7 +467,6 @@
        "30                                                 67         \n",
        "31                                               3373         \n",
        "32                                               1786         \n",
-       "33                                                            \n",
        "\n",
        "   Cured/Discharged/Migrated  \\\n",
        "0                         33   \n",
@@ -522,7 +502,6 @@
        "30                        46   \n",
        "31                      1499   \n",
        "32                       372   \n",
-       "33                     19358   \n",
        "\n",
        "   Deaths ( more than 70% cases due to comorbidities )  \n",
        "0                                                   0   \n",
@@ -557,11 +536,10 @@
        "29                                                  0   \n",
        "30                                                  1   \n",
        "31                                                 74   \n",
-       "32                                                171   \n",
-       "33                                                      "
+       "32                                                171   "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
