--- a/different scrapper techniques.ipynb
+++ b/different scrapper techniques.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,143 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class web_scraper:\n",
+    "    def __init__(self, url):\n",
+    "        self.url = url\n",
+    "      \n",
+    "    def __head_scrap(self):\n",
+    "        scraping_data = []\n",
+    "        page = req.get(self.url).text\n",
+    "        parsed_page = bs(page, 'html.parser')\n",
+    "        labels = [label for label in parsed_page.find_all('tr')[0].get_text().splitlines()[1:]]\n",
+    "        temp = [scraping_data.append((t, [])) for t in labels]\n",
+    "        self.__td_scrap(parsed_page, scraping_data)\n",
+    "        \n",
+    "        \n",
+    "    def __td_scrap(self, parsed_page, scraping_data):\n",
+    "        td_data = parsed_page.find_all('tr')\n",
+    "        for j in range(1, len(parsed_page.find_all('tr')[1:])):\n",
+    "            i = 0\n",
+    "            td = td_data[j].get_text().splitlines()[1:]\n",
+    "            if len(td) != len(td_data[0].get_text().splitlines()[1:]):\n",
+    "                break\n",
+    "            for row_data in td:\n",
+    "                scraping_data[i][1].append(row_data)\n",
+    "                i+=1\n",
+    "        self.__data_csv(scraping_data)\n",
+    "                \n",
+    "    def __data_csv(self, scraping_data):\n",
+    "        data = {title:column for (title, column) in scraping_data}\n",
+    "        scraped_data = pd.DataFrame(data)\n",
+    "        print(scraped_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://www.mohfw.gov.in/'\n",
+    "df = web_scraper(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   S. No.           Name of State / UT Total Confirmed cases*   \\\n",
+      "0       1  Andaman and Nicobar Islands                      33   \n",
+      "1       2               Andhra Pradesh                    2018   \n",
+      "2       3            Arunachal Pradesh                       1   \n",
+      "3       4                        Assam                      65   \n",
+      "4       5                        Bihar                     747   \n",
+      "5       6                   Chandigarh                     174   \n",
+      "6       7                 Chhattisgarh                      59   \n",
+      "7       8           Dadar Nagar Haveli                       1   \n",
+      "8       9                        Delhi                    7233   \n",
+      "9      10                          Goa                       7   \n",
+      "10     11                      Gujarat                    8541   \n",
+      "11     12                      Haryana                     730   \n",
+      "12     13             Himachal Pradesh                      59   \n",
+      "13     14            Jammu and Kashmir                     879   \n",
+      "14     15                    Jharkhand                     160   \n",
+      "15     16                    Karnataka                     862   \n",
+      "16     17                       Kerala                     519   \n",
+      "17     18                       Ladakh                      42   \n",
+      "18     19               Madhya Pradesh                    3785   \n",
+      "19     20                  Maharashtra                   23401   \n",
+      "20     21                      Manipur                       2   \n",
+      "21     22                    Meghalaya                      13   \n",
+      "22     23                      Mizoram                       1   \n",
+      "23     24                       Odisha                     414   \n",
+      "24     25                   Puducherry                      12   \n",
+      "25     26                       Punjab                    1877   \n",
+      "26     27                    Rajasthan                    3988   \n",
+      "27     28                   Tamil Nadu                    8002   \n",
+      "28     29                    Telengana                    1275   \n",
+      "29     30                      Tripura                     152   \n",
+      "30     31                  Uttarakhand                      68   \n",
+      "31     32                Uttar Pradesh                    3573   \n",
+      "32     33                  West Bengal                    2063   \n",
+      "\n",
+      "   Cured/Discharged/Migrated Deaths**  \n",
+      "0                         33        0  \n",
+      "1                        975       45  \n",
+      "2                          1        0  \n",
+      "3                         34        2  \n",
+      "4                        377        6  \n",
+      "5                         24        2  \n",
+      "6                         53        0  \n",
+      "7                          0        0  \n",
+      "8                       2129       73  \n",
+      "9                          7        0  \n",
+      "10                      2780      513  \n",
+      "11                       337       11  \n",
+      "12                        39        2  \n",
+      "13                       427       10  \n",
+      "14                        78        3  \n",
+      "15                       426       31  \n",
+      "16                       489        4  \n",
+      "17                        21        0  \n",
+      "18                      1747      221  \n",
+      "19                      4786      868  \n",
+      "20                         2        0  \n",
+      "21                        10        1  \n",
+      "22                         1        0  \n",
+      "23                        85        3  \n",
+      "24                         6        0  \n",
+      "25                       168       31  \n",
+      "26                      2264      113  \n",
+      "27                      2051       53  \n",
+      "28                       800       30  \n",
+      "29                         2        0  \n",
+      "30                        46        1  \n",
+      "31                      1758       80  \n",
+      "32                       499      190  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df._web_scraper__head_scrap()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://www.mohfw.gov.in/'"
+    "# url = 'https://www.mohfw.gov.in/'"
    ]
   },
   {
@@ -33,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "page = req.get(url).text"
+    "# page = req.get(url).text"
    ]
   },
   {
@@ -42,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parsed_page = bs(page, 'html.parser')"
+    "# parsed_page = bs(page, 'html.parser')"
    ]
   },
   {
@@ -62,9 +194,9 @@
     }
    ],
    "source": [
-    "scraping_data = []\n",
-    "labels = [label for label in parsed_page.find_all('tr')[0].get_text().splitlines()[1:]]\n",
-    "[scraping_data.append((t, [])) for t in labels]\n",
+    "# scraping_data = []\n",
+    "# labels = [label for label in parsed_page.find_all('tr')[0].get_text().splitlines()[1:]]\n",
+    "# [scraping_data.append((t, [])) for t in labels]\n",
     "# list(map(lambda x: data.append((x,)), [i for i in labels]))"
    ]
   },
@@ -74,15 +206,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "td_data = parsed_page.find_all('tr')\n",
-    "for j in range(1, len(parsed_page.find_all('tr')[1:])):\n",
-    "    i = 0\n",
-    "    td = td_data[j].get_text().splitlines()[1:]\n",
-    "    if len(td) != len(td_data[0].get_text().splitlines()[1:]):\n",
-    "        break\n",
-    "    for row_data in td:\n",
-    "        scraping_data[i][1].append(row_data)\n",
-    "        i+=1"
+    "# td_data = parsed_page.find_all('tr')\n",
+    "# for j in range(1, len(parsed_page.find_all('tr')[1:])):\n",
+    "#     i = 0\n",
+    "#     td = td_data[j].get_text().splitlines()[1:]\n",
+    "#     if len(td) != len(td_data[0].get_text().splitlines()[1:]):\n",
+    "#         break\n",
+    "#     for row_data in td:\n",
+    "#         scraping_data[i][1].append(row_data)\n",
+    "#         i+=1"
    ]
   },
   {
@@ -91,8 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {title:column for (title, column) in scraping_data}\n",
-    "india_data = pd.DataFrame(data)"
+    "# data = {title:column for (title, column) in scraping_data}\n",
+    "# india_data = pd.DataFrame(data)"
    ]
   },
   {
@@ -545,15 +677,8 @@
     }
    ],
    "source": [
-    "india_data"
+    "# india_data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -572,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
