--- a/different scrapper techniques.ipynb
+++ b/different scrapper techniques.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "        parsed_page = bs(page, 'html.parser')\n",
     "        labels = [label for label in parsed_page.find_all('tr')[0].get_text().splitlines()[1:]]\n",
     "        temp = [scraping_data.append((t, [])) for t in labels]\n",
-    "        self.__td_scrap(parsed_page, scraping_data)\n",
+    "        return self.__td_scrap(parsed_page, scraping_data)\n",
     "        \n",
     "        \n",
     "    def __td_scrap(self, parsed_page, scraping_data):\n",
@@ -47,17 +47,17 @@
     "            for row_data in td:\n",
     "                scraping_data[i][1].append(row_data)\n",
     "                i+=1\n",
-    "        self.__data_csv(scraping_data)\n",
+    "        return self.__data_csv(scraping_data)\n",
     "                \n",
     "    def __data_csv(self, scraping_data):\n",
     "        data = {title:column for (title, column) in scraping_data}\n",
     "        scraped_data = pd.DataFrame(data)\n",
-    "        print(scraped_data)"
+    "        return scraped_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,87 +67,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df._web_scraper__head_scrap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   S. No.           Name of State / UT Total Confirmed cases*   \\\n",
-      "0       1  Andaman and Nicobar Islands                      33   \n",
-      "1       2               Andhra Pradesh                    2018   \n",
-      "2       3            Arunachal Pradesh                       1   \n",
-      "3       4                        Assam                      65   \n",
-      "4       5                        Bihar                     747   \n",
-      "5       6                   Chandigarh                     174   \n",
-      "6       7                 Chhattisgarh                      59   \n",
-      "7       8           Dadar Nagar Haveli                       1   \n",
-      "8       9                        Delhi                    7233   \n",
-      "9      10                          Goa                       7   \n",
-      "10     11                      Gujarat                    8541   \n",
-      "11     12                      Haryana                     730   \n",
-      "12     13             Himachal Pradesh                      59   \n",
-      "13     14            Jammu and Kashmir                     879   \n",
-      "14     15                    Jharkhand                     160   \n",
-      "15     16                    Karnataka                     862   \n",
-      "16     17                       Kerala                     519   \n",
-      "17     18                       Ladakh                      42   \n",
-      "18     19               Madhya Pradesh                    3785   \n",
-      "19     20                  Maharashtra                   23401   \n",
-      "20     21                      Manipur                       2   \n",
-      "21     22                    Meghalaya                      13   \n",
-      "22     23                      Mizoram                       1   \n",
-      "23     24                       Odisha                     414   \n",
-      "24     25                   Puducherry                      12   \n",
-      "25     26                       Punjab                    1877   \n",
-      "26     27                    Rajasthan                    3988   \n",
-      "27     28                   Tamil Nadu                    8002   \n",
-      "28     29                    Telengana                    1275   \n",
-      "29     30                      Tripura                     152   \n",
-      "30     31                  Uttarakhand                      68   \n",
-      "31     32                Uttar Pradesh                    3573   \n",
-      "32     33                  West Bengal                    2063   \n",
-      "\n",
-      "   Cured/Discharged/Migrated Deaths**  \n",
-      "0                         33        0  \n",
-      "1                        975       45  \n",
-      "2                          1        0  \n",
-      "3                         34        2  \n",
-      "4                        377        6  \n",
-      "5                         24        2  \n",
-      "6                         53        0  \n",
-      "7                          0        0  \n",
-      "8                       2129       73  \n",
-      "9                          7        0  \n",
-      "10                      2780      513  \n",
-      "11                       337       11  \n",
-      "12                        39        2  \n",
-      "13                       427       10  \n",
-      "14                        78        3  \n",
-      "15                       426       31  \n",
-      "16                       489        4  \n",
-      "17                        21        0  \n",
-      "18                      1747      221  \n",
-      "19                      4786      868  \n",
-      "20                         2        0  \n",
-      "21                        10        1  \n",
-      "22                         1        0  \n",
-      "23                        85        3  \n",
-      "24                         6        0  \n",
-      "25                       168       31  \n",
-      "26                      2264      113  \n",
-      "27                      2051       53  \n",
-      "28                       800       30  \n",
-      "29                         2        0  \n",
-      "30                        46        1  \n",
-      "31                      1758       80  \n",
-      "32                       499      190  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S. No.</th>\n",
+       "      <th>Name of State / UT</th>\n",
+       "      <th>Total Confirmed cases*</th>\n",
+       "      <th>Cured/Discharged/Migrated</th>\n",
+       "      <th>Deaths**</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Andaman and Nicobar Islands</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>975</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Arunachal Pradesh</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Assam</td>\n",
+       "      <td>65</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>747</td>\n",
+       "      <td>377</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Chandigarh</td>\n",
+       "      <td>174</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Chhattisgarh</td>\n",
+       "      <td>59</td>\n",
+       "      <td>53</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Dadar Nagar Haveli</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>7233</td>\n",
+       "      <td>2129</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Goa</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Gujarat</td>\n",
+       "      <td>8541</td>\n",
+       "      <td>2780</td>\n",
+       "      <td>513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Haryana</td>\n",
+       "      <td>730</td>\n",
+       "      <td>337</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Himachal Pradesh</td>\n",
+       "      <td>59</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Jammu and Kashmir</td>\n",
+       "      <td>879</td>\n",
+       "      <td>427</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Jharkhand</td>\n",
+       "      <td>160</td>\n",
+       "      <td>78</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Karnataka</td>\n",
+       "      <td>862</td>\n",
+       "      <td>426</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Kerala</td>\n",
+       "      <td>519</td>\n",
+       "      <td>489</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Ladakh</td>\n",
+       "      <td>42</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>3785</td>\n",
+       "      <td>1747</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Maharashtra</td>\n",
+       "      <td>23401</td>\n",
+       "      <td>4786</td>\n",
+       "      <td>868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Manipur</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Meghalaya</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Mizoram</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Odisha</td>\n",
+       "      <td>414</td>\n",
+       "      <td>85</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Puducherry</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Punjab</td>\n",
+       "      <td>1877</td>\n",
+       "      <td>168</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Rajasthan</td>\n",
+       "      <td>3988</td>\n",
+       "      <td>2264</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Tamil Nadu</td>\n",
+       "      <td>8002</td>\n",
+       "      <td>2051</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Telengana</td>\n",
+       "      <td>1275</td>\n",
+       "      <td>800</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Tripura</td>\n",
+       "      <td>152</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Uttarakhand</td>\n",
+       "      <td>68</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Uttar Pradesh</td>\n",
+       "      <td>3573</td>\n",
+       "      <td>1758</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>33</td>\n",
+       "      <td>West Bengal</td>\n",
+       "      <td>2063</td>\n",
+       "      <td>499</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   S. No.           Name of State / UT Total Confirmed cases*   \\\n",
+       "0       1  Andaman and Nicobar Islands                      33   \n",
+       "1       2               Andhra Pradesh                    2018   \n",
+       "2       3            Arunachal Pradesh                       1   \n",
+       "3       4                        Assam                      65   \n",
+       "4       5                        Bihar                     747   \n",
+       "5       6                   Chandigarh                     174   \n",
+       "6       7                 Chhattisgarh                      59   \n",
+       "7       8           Dadar Nagar Haveli                       1   \n",
+       "8       9                        Delhi                    7233   \n",
+       "9      10                          Goa                       7   \n",
+       "10     11                      Gujarat                    8541   \n",
+       "11     12                      Haryana                     730   \n",
+       "12     13             Himachal Pradesh                      59   \n",
+       "13     14            Jammu and Kashmir                     879   \n",
+       "14     15                    Jharkhand                     160   \n",
+       "15     16                    Karnataka                     862   \n",
+       "16     17                       Kerala                     519   \n",
+       "17     18                       Ladakh                      42   \n",
+       "18     19               Madhya Pradesh                    3785   \n",
+       "19     20                  Maharashtra                   23401   \n",
+       "20     21                      Manipur                       2   \n",
+       "21     22                    Meghalaya                      13   \n",
+       "22     23                      Mizoram                       1   \n",
+       "23     24                       Odisha                     414   \n",
+       "24     25                   Puducherry                      12   \n",
+       "25     26                       Punjab                    1877   \n",
+       "26     27                    Rajasthan                    3988   \n",
+       "27     28                   Tamil Nadu                    8002   \n",
+       "28     29                    Telengana                    1275   \n",
+       "29     30                      Tripura                     152   \n",
+       "30     31                  Uttarakhand                      68   \n",
+       "31     32                Uttar Pradesh                    3573   \n",
+       "32     33                  West Bengal                    2063   \n",
+       "\n",
+       "   Cured/Discharged/Migrated Deaths**  \n",
+       "0                         33        0  \n",
+       "1                        975       45  \n",
+       "2                          1        0  \n",
+       "3                         34        2  \n",
+       "4                        377        6  \n",
+       "5                         24        2  \n",
+       "6                         53        0  \n",
+       "7                          0        0  \n",
+       "8                       2129       73  \n",
+       "9                          7        0  \n",
+       "10                      2780      513  \n",
+       "11                       337       11  \n",
+       "12                        39        2  \n",
+       "13                       427       10  \n",
+       "14                        78        3  \n",
+       "15                       426       31  \n",
+       "16                       489        4  \n",
+       "17                        21        0  \n",
+       "18                      1747      221  \n",
+       "19                      4786      868  \n",
+       "20                         2        0  \n",
+       "21                        10        1  \n",
+       "22                         1        0  \n",
+       "23                        85        3  \n",
+       "24                         6        0  \n",
+       "25                       168       31  \n",
+       "26                      2264      113  \n",
+       "27                      2051       53  \n",
+       "28                       800       30  \n",
+       "29                         2        0  \n",
+       "30                        46        1  \n",
+       "31                      1758       80  \n",
+       "32                       499      190  "
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df._web_scraper__head_scrap()"
+    "data"
    ]
   },
   {
